[package]
name = "rpncalc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = {version = "4.0.9",features = ["derive"]}
thiserror = "1.0.37"

[[bin]]
name = "main"
path = "src/main.rs"
